Scrollbar is hidden for a more correct display

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,4 +4,10 @@
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
+
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
