--- a/src/components/PromoSection/PromoSection.css
+++ b/src/components/PromoSection/PromoSection.css
@@ -137,7 +137,7 @@
   top: -30px;
   left: 772px;
 
-  background-image: url("/public/assets/logo.png");
+  background-image: url("/public/assets/logo-crop.png");
   background-position: 50%;
   background-size: cover;
   background-repeat: no-repeat;
